# dactmerge

./: CMakeLists.txt
include/: MainWindow.hh
src/: MainWindow.cpp  main.cpp
ui/: MainWindow.ui
